--- a/doc/agile/v1/sprint_backlog_05.org
+++ b/doc/agile/v1/sprint_backlog_05.org
@@ -14,39 +14,40 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-09-17 Sun 15:19]
+#+CAPTION: Clock summary at [2017-09-17 Sun 15:42]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *55:59* |       |       | 100.0 |
+| *Total time*                                                                | *56:20* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 55:59   |       |       | 100.0 |
-| Active                                                                      |         | 55:59 |       | 100.0 |
+| Stories                                                                     | 56:20   |       |       | 100.0 |
+| Active                                                                      |         | 56:20 |       | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:44 |   1.3 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  1:43 |   3.1 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  1:43 |   3.0 |
 | COMPLETED Remove object types in yarn                                       |         |       |  0:52 |   1.5 |
 | COMPLETED Clean-up readme                                                   |         |       |  1:15 |   2.2 |
 | COMPLETED Rename transformers to adapters                                   |         |       |  0:28 |   0.8 |
 | COMPLETED Analysis on annotations and profiles                              |         |       |  2:26 |   4.3 |
 | COMPLETED Use namespaced stereotypes                                        |         |       |  1:49 |   3.2 |
 | COMPLETED Tailor dogen models                                               |         |       |  0:21 |   0.6 |
-| COMPLETED Rename yarn concepts                                              |         |       |  7:49 |  14.0 |
+| COMPLETED Rename yarn concepts                                              |         |       |  7:49 |  13.9 |
 | COMPLETED Remove extra copying in mapper                                    |         |       |  0:05 |   0.1 |
 | COMPLETED Investigate the JSON break on Northwind model                     |         |       |  0:57 |   1.7 |
 | COMPLETED Rename ODB parameters                                             |         |       |  0:11 |   0.3 |
 | COMPLETED Investigate usage of origin type                                  |         |       |  0:15 |   0.4 |
-| COMPLETED Improve dumping of models                                         |         |       | 12:59 |  23.2 |
+| COMPLETED Improve dumping of models                                         |         |       | 12:59 |  23.0 |
 | COMPLETED Create yarn options                                               |         |       |  1:06 |   2.0 |
 | COMPLETED Merge knit with yarn                                              |         |       |  1:13 |   2.2 |
 | COMPLETED Add probing support to code generation tests                      |         |       |  2:45 |   4.9 |
 | COMPLETED Find some way of scoping transform probing                        |         |       |  3:06 |   5.5 |
 | COMPLETED Catch directory generation errors in probe                        |         |       |  1:05 |   1.9 |
 | COMPLETED Remove dumping of models from log                                 |         |       |  0:06 |   0.2 |
-| COMPLETED Move model sorter from helpers                                    |         |       |  0:32 |   1.0 |
+| COMPLETED Move model sorter from helpers                                    |         |       |  0:32 |   0.9 |
 | COMPLETED Add canonical archetype support to yarn                           |         |       |  7:18 |  13.0 |
 | COMPLETED Remove artefact from assistant casting                            |         |       |  0:20 |   0.6 |
 | COMPLETED Untabify windows templates                                        |         |       |  0:04 |   0.1 |
-| STARTED Split out transforms from post-processing chain                     |         |       |  1:40 |   3.0 |
+| STARTED Output stats in org-mode format                                     |         |       |  0:02 |   0.1 |
+| STARTED Split out transforms from post-processing chain                     |         |       |  1:59 |   3.5 |
 | STARTED Move enablement into yarn                                           |         |       |  4:50 |   8.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -898,6 +899,17 @@ it.
 It seems we have a lot of tabs on Visual Studio solutions, projects
 etc. Untabify the templates and regenerate all.
 
+*** STARTED Output stats in org-mode format                           :story:
+    CLOCK: [2017-09-17 Sun 15:40]--[2017-09-17 Sun 15:42] =>  0:02
+
+It would be nice to be able to collapse the stats sometimes, so one
+can inspect the transform graph. However, we do not need this all the
+time - the flat TXT format is useful too. We need a probing option to
+output stats in org-mode format.
+
+Also, we need to state that "debug" pertains to debug logging, not a
+debug build. Add labels, e.g.: =log:debug=, etc.
+
 *** STARTED Split out transforms from post-processing chain           :story:
     CLOCK: [2017-09-17 Sun 15:20]--[2017-09-17 Sun 15:39] =>  0:19
     CLOCK: [2017-09-17 Sun 15:00]--[2017-09-17 Sun 15:19] =>  0:19
@@ -930,16 +942,6 @@ Tasks:
   transform and the model post-processing pipeline.
 - delete all the endomodel members that are no longer required; update
   adapter. Update yarn diagram.
-
-*** Output stats in org-mode format                                   :story:
-
-It would be nice to be able to collapse the stats sometimes, so one
-can inspect the transform graph. However, we do not need this all the
-time - the flat TXT format is useful too. We need a probing option to
-output stats in org-mode format.
-
-Also, we need to state that "debug" pertains to debug logging, not a
-debug build. Add labels, e.g.: =log:debug=, etc.
 
 *** STARTED Move enablement into yarn                                 :story:
     CLOCK: [2017-09-16 Sat 20:50]--[2017-09-16 Sat 21:01] =>  0:11
