--- a/doc/agile/v1/sprint_backlog_05.org
+++ b/doc/agile/v1/sprint_backlog_05.org
@@ -14,14 +14,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-09-17 Sun 16:23]
+#+CAPTION: Clock summary at [2017-09-17 Sun 16:35]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *56:58* |       |       | 100.0 |
+| *Total time*                                                                | *57:10* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 56:58   |       |       | 100.0 |
-| Active                                                                      |         | 56:58 |       | 100.0 |
+| Stories                                                                     | 57:10   |       |       | 100.0 |
+| Active                                                                      |         | 57:10 |       | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:44 |   1.3 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  1:43 |   3.0 |
 | COMPLETED Remove object types in yarn                                       |         |       |  0:52 |   1.5 |
@@ -35,7 +35,7 @@
 | COMPLETED Investigate the JSON break on Northwind model                     |         |       |  0:57 |   1.7 |
 | COMPLETED Rename ODB parameters                                             |         |       |  0:11 |   0.3 |
 | COMPLETED Investigate usage of origin type                                  |         |       |  0:15 |   0.4 |
-| COMPLETED Improve dumping of models                                         |         |       | 12:59 |  22.8 |
+| COMPLETED Improve dumping of models                                         |         |       | 12:59 |  22.7 |
 | COMPLETED Create yarn options                                               |         |       |  1:06 |   1.9 |
 | COMPLETED Merge knit with yarn                                              |         |       |  1:13 |   2.1 |
 | COMPLETED Add probing support to code generation tests                      |         |       |  2:45 |   4.8 |
@@ -47,7 +47,7 @@
 | COMPLETED Remove artefact from assistant casting                            |         |       |  0:20 |   0.6 |
 | COMPLETED Untabify windows templates                                        |         |       |  0:04 |   0.1 |
 | COMPLETED Output stats in org-mode format                                   |         |       |  0:40 |   1.2 |
-| STARTED Split out transforms from post-processing chain                     |         |       |  1:59 |   3.5 |
+| STARTED Split out transforms from post-processing chain                     |         |       |  2:11 |   3.8 |
 | STARTED Move enablement into yarn                                           |         |       |  4:50 |   8.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -914,6 +914,7 @@ Also, we need to state that "debug" pertains to debug logging, not a
 debug build. Add labels, e.g.: =log:debug=, etc.
 
 *** STARTED Split out transforms from post-processing chain           :story:
+    CLOCK: [2017-09-17 Sun 16:23]--[2017-09-17 Sun 16:35] =>  0:12
     CLOCK: [2017-09-17 Sun 15:20]--[2017-09-17 Sun 15:39] =>  0:19
     CLOCK: [2017-09-17 Sun 15:00]--[2017-09-17 Sun 15:19] =>  0:19
     CLOCK: [2017-09-17 Sun 14:42]--[2017-09-17 Sun 14:59] =>  0:17
