--- a/doc/agile/v1/sprint_backlog_05.org
+++ b/doc/agile/v1/sprint_backlog_05.org
@@ -14,14 +14,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-09-17 Sun 16:49]
+#+CAPTION: Clock summary at [2017-09-17 Sun 16:55]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *57:22* |       |       | 100.0 |
+| *Total time*                                                                | *57:27* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 57:22   |       |       | 100.0 |
-| Active                                                                      |         | 57:22 |       | 100.0 |
+| Stories                                                                     | 57:27   |       |       | 100.0 |
+| Active                                                                      |         | 57:27 |       | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:44 |   1.3 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  1:43 |   3.0 |
 | COMPLETED Remove object types in yarn                                       |         |       |  0:52 |   1.5 |
@@ -47,7 +47,7 @@
 | COMPLETED Remove artefact from assistant casting                            |         |       |  0:20 |   0.6 |
 | COMPLETED Untabify windows templates                                        |         |       |  0:04 |   0.1 |
 | COMPLETED Output stats in org-mode format                                   |         |       |  0:40 |   1.2 |
-| STARTED Split out transforms from post-processing chain                     |         |       |  2:23 |   4.2 |
+| STARTED Split out transforms from post-processing chain                     |         |       |  2:28 |   4.3 |
 | STARTED Move enablement into yarn                                           |         |       |  4:50 |   8.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -914,6 +914,7 @@ Also, we need to state that "debug" pertains to debug logging, not a
 debug build. Add labels, e.g.: =log:debug=, etc.
 
 *** STARTED Split out transforms from post-processing chain           :story:
+    CLOCK: [2017-09-17 Sun 16:50]--[2017-09-17 Sun 16:55] =>  0:05
     CLOCK: [2017-09-17 Sun 16:42]--[2017-09-17 Sun 16:49] =>  0:07
     CLOCK: [2017-09-17 Sun 16:36]--[2017-09-17 Sun 16:41] =>  0:05
     CLOCK: [2017-09-17 Sun 16:23]--[2017-09-17 Sun 16:35] =>  0:12
