--- a/doc/agile/v1/sprint_backlog_05.org
+++ b/doc/agile/v1/sprint_backlog_05.org
@@ -14,41 +14,41 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-09-17 Sun 16:55]
+#+CAPTION: Clock summary at [2017-09-17 Sun 18:06]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *57:27* |       |       | 100.0 |
+| *Total time*                                                                | *58:37* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 57:27   |       |       | 100.0 |
-| Active                                                                      |         | 57:27 |       | 100.0 |
+| Stories                                                                     | 58:37   |       |       | 100.0 |
+| Active                                                                      |         | 58:37 |       | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:44 |   1.3 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  1:43 |   3.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  1:43 |   2.9 |
 | COMPLETED Remove object types in yarn                                       |         |       |  0:52 |   1.5 |
-| COMPLETED Clean-up readme                                                   |         |       |  1:15 |   2.2 |
+| COMPLETED Clean-up readme                                                   |         |       |  1:15 |   2.1 |
 | COMPLETED Rename transformers to adapters                                   |         |       |  0:28 |   0.8 |
 | COMPLETED Analysis on annotations and profiles                              |         |       |  2:26 |   4.2 |
-| COMPLETED Use namespaced stereotypes                                        |         |       |  1:49 |   3.2 |
+| COMPLETED Use namespaced stereotypes                                        |         |       |  1:49 |   3.1 |
 | COMPLETED Tailor dogen models                                               |         |       |  0:21 |   0.6 |
-| COMPLETED Rename yarn concepts                                              |         |       |  7:49 |  13.6 |
+| COMPLETED Rename yarn concepts                                              |         |       |  7:49 |  13.3 |
 | COMPLETED Remove extra copying in mapper                                    |         |       |  0:05 |   0.1 |
-| COMPLETED Investigate the JSON break on Northwind model                     |         |       |  0:57 |   1.7 |
+| COMPLETED Investigate the JSON break on Northwind model                     |         |       |  0:57 |   1.6 |
 | COMPLETED Rename ODB parameters                                             |         |       |  0:11 |   0.3 |
 | COMPLETED Investigate usage of origin type                                  |         |       |  0:15 |   0.4 |
-| COMPLETED Improve dumping of models                                         |         |       | 12:59 |  22.6 |
+| COMPLETED Improve dumping of models                                         |         |       | 12:59 |  22.1 |
 | COMPLETED Create yarn options                                               |         |       |  1:06 |   1.9 |
 | COMPLETED Merge knit with yarn                                              |         |       |  1:13 |   2.1 |
-| COMPLETED Add probing support to code generation tests                      |         |       |  2:45 |   4.8 |
-| COMPLETED Find some way of scoping transform probing                        |         |       |  3:06 |   5.4 |
-| COMPLETED Catch directory generation errors in probe                        |         |       |  1:05 |   1.9 |
+| COMPLETED Add probing support to code generation tests                      |         |       |  2:45 |   4.7 |
+| COMPLETED Find some way of scoping transform probing                        |         |       |  3:06 |   5.3 |
+| COMPLETED Catch directory generation errors in probe                        |         |       |  1:05 |   1.8 |
 | COMPLETED Remove dumping of models from log                                 |         |       |  0:06 |   0.2 |
 | COMPLETED Move model sorter from helpers                                    |         |       |  0:32 |   0.9 |
-| COMPLETED Add canonical archetype support to yarn                           |         |       |  7:18 |  12.7 |
+| COMPLETED Add canonical archetype support to yarn                           |         |       |  7:18 |  12.5 |
 | COMPLETED Remove artefact from assistant casting                            |         |       |  0:20 |   0.6 |
 | COMPLETED Untabify windows templates                                        |         |       |  0:04 |   0.1 |
-| COMPLETED Output stats in org-mode format                                   |         |       |  0:40 |   1.2 |
-| STARTED Split out transforms from post-processing chain                     |         |       |  2:28 |   4.3 |
-| STARTED Move enablement into yarn                                           |         |       |  4:50 |   8.4 |
+| COMPLETED Output stats in org-mode format                                   |         |       |  0:40 |   1.1 |
+| STARTED Split out transforms from post-processing chain                     |         |       |  3:38 |   6.2 |
+| STARTED Move enablement into yarn                                           |         |       |  4:50 |   8.2 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -914,6 +914,7 @@ Also, we need to state that "debug" pertains to debug logging, not a
 debug build. Add labels, e.g.: =log:debug=, etc.
 
 *** STARTED Split out transforms from post-processing chain           :story:
+    CLOCK: [2017-09-17 Sun 16:56]--[2017-09-17 Sun 18:06] =>  1:10
     CLOCK: [2017-09-17 Sun 16:50]--[2017-09-17 Sun 16:55] =>  0:05
     CLOCK: [2017-09-17 Sun 16:42]--[2017-09-17 Sun 16:49] =>  0:07
     CLOCK: [2017-09-17 Sun 16:36]--[2017-09-17 Sun 16:41] =>  0:05
