--- a/doc/agile/v1/sprint_backlog_05.org
+++ b/doc/agile/v1/sprint_backlog_05.org
@@ -14,20 +14,20 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-09-17 Sun 18:06]
+#+CAPTION: Clock summary at [2017-09-17 Sun 18:15]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *58:37* |       |       | 100.0 |
+| *Total time*                                                                | *58:44* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 58:37   |       |       | 100.0 |
-| Active                                                                      |         | 58:37 |       | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  0:44 |   1.3 |
+| Stories                                                                     | 58:44   |       |       | 100.0 |
+| Active                                                                      |         | 58:44 |       | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:44 |   1.2 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  1:43 |   2.9 |
 | COMPLETED Remove object types in yarn                                       |         |       |  0:52 |   1.5 |
 | COMPLETED Clean-up readme                                                   |         |       |  1:15 |   2.1 |
 | COMPLETED Rename transformers to adapters                                   |         |       |  0:28 |   0.8 |
-| COMPLETED Analysis on annotations and profiles                              |         |       |  2:26 |   4.2 |
+| COMPLETED Analysis on annotations and profiles                              |         |       |  2:26 |   4.1 |
 | COMPLETED Use namespaced stereotypes                                        |         |       |  1:49 |   3.1 |
 | COMPLETED Tailor dogen models                                               |         |       |  0:21 |   0.6 |
 | COMPLETED Rename yarn concepts                                              |         |       |  7:49 |  13.3 |
@@ -43,11 +43,11 @@
 | COMPLETED Catch directory generation errors in probe                        |         |       |  1:05 |   1.8 |
 | COMPLETED Remove dumping of models from log                                 |         |       |  0:06 |   0.2 |
 | COMPLETED Move model sorter from helpers                                    |         |       |  0:32 |   0.9 |
-| COMPLETED Add canonical archetype support to yarn                           |         |       |  7:18 |  12.5 |
+| COMPLETED Add canonical archetype support to yarn                           |         |       |  7:18 |  12.4 |
 | COMPLETED Remove artefact from assistant casting                            |         |       |  0:20 |   0.6 |
 | COMPLETED Untabify windows templates                                        |         |       |  0:04 |   0.1 |
 | COMPLETED Output stats in org-mode format                                   |         |       |  0:40 |   1.1 |
-| STARTED Split out transforms from post-processing chain                     |         |       |  3:38 |   6.2 |
+| STARTED Split out transforms from post-processing chain                     |         |       |  3:45 |   6.4 |
 | STARTED Move enablement into yarn                                           |         |       |  4:50 |   8.2 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -914,6 +914,7 @@ Also, we need to state that "debug" pertains to debug logging, not a
 debug build. Add labels, e.g.: =log:debug=, etc.
 
 *** STARTED Split out transforms from post-processing chain           :story:
+    CLOCK: [2017-09-17 Sun 18:07]--[2017-09-17 Sun 18:14] =>  0:07
     CLOCK: [2017-09-17 Sun 16:56]--[2017-09-17 Sun 18:06] =>  1:10
     CLOCK: [2017-09-17 Sun 16:50]--[2017-09-17 Sun 16:55] =>  0:05
     CLOCK: [2017-09-17 Sun 16:42]--[2017-09-17 Sun 16:49] =>  0:07
@@ -950,6 +951,8 @@ Tasks:
   transform and the model post-processing pipeline.
 - delete all the endomodel members that are no longer required; update
   adapter. Update yarn diagram.
+- generability
+- model to text rename
 
 *** STARTED Move enablement into yarn                                 :story:
     CLOCK: [2017-09-16 Sat 20:50]--[2017-09-16 Sat 21:01] =>  0:11
