--- a/doc/agile/v1/sprint_backlog_05.org
+++ b/doc/agile/v1/sprint_backlog_05.org
@@ -14,14 +14,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-09-17 Sun 18:15]
+#+CAPTION: Clock summary at [2017-09-17 Sun 18:26]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *58:44* |       |       | 100.0 |
+| *Total time*                                                                | *58:55* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 58:44   |       |       | 100.0 |
-| Active                                                                      |         | 58:44 |       | 100.0 |
+| Stories                                                                     | 58:55   |       |       | 100.0 |
+| Active                                                                      |         | 58:55 |       | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:44 |   1.2 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  1:43 |   2.9 |
 | COMPLETED Remove object types in yarn                                       |         |       |  0:52 |   1.5 |
@@ -35,7 +35,7 @@
 | COMPLETED Investigate the JSON break on Northwind model                     |         |       |  0:57 |   1.6 |
 | COMPLETED Rename ODB parameters                                             |         |       |  0:11 |   0.3 |
 | COMPLETED Investigate usage of origin type                                  |         |       |  0:15 |   0.4 |
-| COMPLETED Improve dumping of models                                         |         |       | 12:59 |  22.1 |
+| COMPLETED Improve dumping of models                                         |         |       | 12:59 |  22.0 |
 | COMPLETED Create yarn options                                               |         |       |  1:06 |   1.9 |
 | COMPLETED Merge knit with yarn                                              |         |       |  1:13 |   2.1 |
 | COMPLETED Add probing support to code generation tests                      |         |       |  2:45 |   4.7 |
@@ -47,7 +47,7 @@
 | COMPLETED Remove artefact from assistant casting                            |         |       |  0:20 |   0.6 |
 | COMPLETED Untabify windows templates                                        |         |       |  0:04 |   0.1 |
 | COMPLETED Output stats in org-mode format                                   |         |       |  0:40 |   1.1 |
-| STARTED Split out transforms from post-processing chain                     |         |       |  3:45 |   6.4 |
+| STARTED Split out transforms from post-processing chain                     |         |       |  3:56 |   6.7 |
 | STARTED Move enablement into yarn                                           |         |       |  4:50 |   8.2 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -914,6 +914,7 @@ Also, we need to state that "debug" pertains to debug logging, not a
 debug build. Add labels, e.g.: =log:debug=, etc.
 
 *** STARTED Split out transforms from post-processing chain           :story:
+    CLOCK: [2017-09-17 Sun 18:15]--[2017-09-17 Sun 18:26] =>  0:11
     CLOCK: [2017-09-17 Sun 18:07]--[2017-09-17 Sun 18:14] =>  0:07
     CLOCK: [2017-09-17 Sun 16:56]--[2017-09-17 Sun 18:06] =>  1:10
     CLOCK: [2017-09-17 Sun 16:50]--[2017-09-17 Sun 16:55] =>  0:05
