--- a/doc/agile/v1/sprint_backlog_05.org
+++ b/doc/agile/v1/sprint_backlog_05.org
@@ -14,14 +14,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-09-17 Sun 18:26]
+#+CAPTION: Clock summary at [2017-09-17 Sun 18:36]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *58:55* |       |       | 100.0 |
+| *Total time*                                                                | *59:03* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 58:55   |       |       | 100.0 |
-| Active                                                                      |         | 58:55 |       | 100.0 |
+| Stories                                                                     | 59:03   |       |       | 100.0 |
+| Active                                                                      |         | 59:03 |       | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:44 |   1.2 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  1:43 |   2.9 |
 | COMPLETED Remove object types in yarn                                       |         |       |  0:52 |   1.5 |
@@ -30,7 +30,7 @@
 | COMPLETED Analysis on annotations and profiles                              |         |       |  2:26 |   4.1 |
 | COMPLETED Use namespaced stereotypes                                        |         |       |  1:49 |   3.1 |
 | COMPLETED Tailor dogen models                                               |         |       |  0:21 |   0.6 |
-| COMPLETED Rename yarn concepts                                              |         |       |  7:49 |  13.3 |
+| COMPLETED Rename yarn concepts                                              |         |       |  7:49 |  13.2 |
 | COMPLETED Remove extra copying in mapper                                    |         |       |  0:05 |   0.1 |
 | COMPLETED Investigate the JSON break on Northwind model                     |         |       |  0:57 |   1.6 |
 | COMPLETED Rename ODB parameters                                             |         |       |  0:11 |   0.3 |
@@ -39,7 +39,7 @@
 | COMPLETED Create yarn options                                               |         |       |  1:06 |   1.9 |
 | COMPLETED Merge knit with yarn                                              |         |       |  1:13 |   2.1 |
 | COMPLETED Add probing support to code generation tests                      |         |       |  2:45 |   4.7 |
-| COMPLETED Find some way of scoping transform probing                        |         |       |  3:06 |   5.3 |
+| COMPLETED Find some way of scoping transform probing                        |         |       |  3:06 |   5.2 |
 | COMPLETED Catch directory generation errors in probe                        |         |       |  1:05 |   1.8 |
 | COMPLETED Remove dumping of models from log                                 |         |       |  0:06 |   0.2 |
 | COMPLETED Move model sorter from helpers                                    |         |       |  0:32 |   0.9 |
@@ -47,7 +47,7 @@
 | COMPLETED Remove artefact from assistant casting                            |         |       |  0:20 |   0.6 |
 | COMPLETED Untabify windows templates                                        |         |       |  0:04 |   0.1 |
 | COMPLETED Output stats in org-mode format                                   |         |       |  0:40 |   1.1 |
-| STARTED Split out transforms from post-processing chain                     |         |       |  3:56 |   6.7 |
+| COMPLETED Split out transforms from post-processing chain                   |         |       |  4:04 |   6.9 |
 | STARTED Move enablement into yarn                                           |         |       |  4:50 |   8.2 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -913,7 +913,9 @@ output stats in org-mode format.
 Also, we need to state that "debug" pertains to debug logging, not a
 debug build. Add labels, e.g.: =log:debug=, etc.
 
-*** STARTED Split out transforms from post-processing chain           :story:
+*** COMPLETED Split out transforms from post-processing chain         :story:
+    CLOSED: [2017-09-17 Sun 18:36]
+    CLOCK: [2017-09-17 Sun 18:27]--[2017-09-17 Sun 18:35] =>  0:08
     CLOCK: [2017-09-17 Sun 18:15]--[2017-09-17 Sun 18:26] =>  0:11
     CLOCK: [2017-09-17 Sun 18:07]--[2017-09-17 Sun 18:14] =>  0:07
     CLOCK: [2017-09-17 Sun 16:56]--[2017-09-17 Sun 18:06] =>  1:10
