--- a/doc/agile/v1/sprint_backlog_05.org
+++ b/doc/agile/v1/sprint_backlog_05.org
@@ -14,14 +14,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-09-17 Sun 18:36]
+#+CAPTION: Clock summary at [2017-09-17 Sun 19:15]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *59:03* |       |       | 100.0 |
+| *Total time*                                                                | *59:07* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 59:03   |       |       | 100.0 |
-| Active                                                                      |         | 59:03 |       | 100.0 |
+| Stories                                                                     | 59:07   |       |       | 100.0 |
+| Active                                                                      |         | 59:07 |       | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:44 |   1.2 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  1:43 |   2.9 |
 | COMPLETED Remove object types in yarn                                       |         |       |  0:52 |   1.5 |
@@ -43,11 +43,11 @@
 | COMPLETED Catch directory generation errors in probe                        |         |       |  1:05 |   1.8 |
 | COMPLETED Remove dumping of models from log                                 |         |       |  0:06 |   0.2 |
 | COMPLETED Move model sorter from helpers                                    |         |       |  0:32 |   0.9 |
-| COMPLETED Add canonical archetype support to yarn                           |         |       |  7:18 |  12.4 |
+| COMPLETED Add canonical archetype support to yarn                           |         |       |  7:18 |  12.3 |
 | COMPLETED Remove artefact from assistant casting                            |         |       |  0:20 |   0.6 |
 | COMPLETED Untabify windows templates                                        |         |       |  0:04 |   0.1 |
 | COMPLETED Output stats in org-mode format                                   |         |       |  0:40 |   1.1 |
-| COMPLETED Split out transforms from post-processing chain                   |         |       |  4:04 |   6.9 |
+| COMPLETED Split out transforms from post-processing chain                   |         |       |  4:08 |   7.0 |
 | STARTED Move enablement into yarn                                           |         |       |  4:50 |   8.2 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -915,6 +915,7 @@ debug build. Add labels, e.g.: =log:debug=, etc.
 
 *** COMPLETED Split out transforms from post-processing chain         :story:
     CLOSED: [2017-09-17 Sun 18:36]
+    CLOCK: [2017-09-17 Sun 19:11]--[2017-09-17 Sun 19:15] =>  0:04
     CLOCK: [2017-09-17 Sun 18:27]--[2017-09-17 Sun 18:35] =>  0:08
     CLOCK: [2017-09-17 Sun 18:15]--[2017-09-17 Sun 18:26] =>  0:11
     CLOCK: [2017-09-17 Sun 18:07]--[2017-09-17 Sun 18:14] =>  0:07
